--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="React Js, Course " />
     <meta name="author" content="Bruno El Daroux" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React JS</title>
+    <title>JavaScript</title>
     <link rel="icon" href="img/codesyntax.jpg" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
